Shiro的Session和记住我

--- a/shiro-1/src/shiro.ini
+++ b/shiro-1/src/shiro.ini
@@ -46,8 +46,8 @@ lonestarr = vespa, goodguy, schwartz
 # Roles with assigned permissions
 # 
 # Each line conforms to the format defined in the
-# org.apache.shiro.realm.text.TextConfigurationRealm#setRoleDefinitions JavaDoc
-# -----------------------------------------------------------------------------
+# org.apache.shiro.realm.text.TlightsaberextConfigurationRealm#setRoleDefinitions JavaDoc
+# ---------------------------------------- -------------------------------------
 [roles]
 # 'admin' role has all permissions, indicated by the wildcard '*'
 admin = *
